deployment/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app: test-deployment
    version: 2.0.0
  ports:
    - port: 8070
      targetPort: 8070
