deployment/test-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service2
spec:
  type: NodePort
  selector:
    app: test-deployment
  ports:
    - port: 8080
      targetPort: 8080
