deployment/testservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: testservice
spec:
  type: NodePort
  selector:
    app: hello
    version: 2.0.0
  ports:
    - port: 80
      targetPort: 8080
