deployment/testIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingress
  namespace: testing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testservice
            port:
              number: 8080
